# SVGDCpp

./: CMakeLists.txt  LICENSE  README.md  requirements.txt
cmake/: SVGDCppConfig.cmake.in
doc/: Doxyfile.in  instructions.md
examples/: CMakeLists.txt  README.md
examples/gaussian_mixture_model/: gmm_example.cpp  gmm_example.ipynb
examples/multivariate_normal/: mvn_example.cpp  mvn_example.ipynb
include/: Core  Distribution  Kernel  Model  Optimizer
include/SVGDCpp/: Core.hpp  Exceptions.hpp  SVGD.hpp
include/SVGDCpp/Distribution/: Distribution.hpp  MultivariateNormal.hpp
include/SVGDCpp/Kernel/: GaussianRBFKernel.hpp  Kernel.hpp  KernelFun.hpp
include/SVGDCpp/Model/: BinomialLikelihood.hpp  BinomialNormalPosterior.hpp  Model.hpp  MultivariateNormal.hpp
include/SVGDCpp/Optimizer/: AdaGrad.hpp  Adam.hpp  Optimizer.hpp  RMSProp.hpp
include/svgd-cpp/: Distribution.hpp  GaussianRBFKernel.hpp  KernelFun.hpp  MultivariateNormal.hpp  SVGDCppCore.hpp
tests/: CMakeLists.txt  test_kernel.cpp  test_model.cpp  test_svgd.cpp
